<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentSendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="56dp">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="409dp"
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:text="问题反馈"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onSendMessage"
            android:text="@string/send"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onSendMessage1"
            android:text="@string/send1"
            android:textSize="36sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>